@@ -1,5 +1,10 @@
 2008-02-14  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
+	  Mono.TextEditor/Caret.cs: Fixed caret drawing error.
+
+2008-02-14  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/ISegment.cs, Mono.TextEditor/TextViewMargin.cs,
 	  Mono.TextEditor/Segment.cs, Mono.TextEditor/LineSegment.cs: Fixed
 	  folding marker drawing.
